fix(appv2): layouts spacing

--- a/packages/appv2/src/styles/layouts.scss
+++ b/packages/appv2/src/styles/layouts.scss
@@ -1,9 +1,9 @@
 .j-layout {
-  @apply flex flex-row space-x-2 pt-3 items-start;
+  @apply flex flex-row sm:space-x-2 pt-3 items-start;
 
   &__leftbar {
     @apply w-1/4 sm:min-w-1/4 flex-none hidden sm:block;
-    @apply p-3 bg-gray-200 rounded-lg;
+    @apply p-3 bg-warm-gray-200 rounded-lg;
     @apply h-auto sticky top-[68px];
   }
 
@@ -13,7 +13,7 @@
 
   &__rightbar {
     @apply w-1/4 sm:min-w-1/4 flex-none hidden lg:block;
-    @apply p-3 bg-gray-200 rounded-lg;
+    @apply p-3 bg-warm-gray-200 rounded-lg;
     @apply h-auto sticky top-[68px];
   }
 }
